・社外連携、袖ヶ浦油種コード対応 ・指摘No329：在庫画面で袖ヶ浦ユーザーは三重塩浜の在庫を制限付きで閲覧可能 ・指摘No368：在庫画面の出荷平均の計算見直し　➡前週６日間(除く日曜日)」の平均値 ↓三宅の知る限り指摘Noなし ・在庫のOTの受入数が元に戻る ・在庫帳票に車数の合計を追加、ヘッダーに年月を追加

--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -917,3 +917,38 @@ input[type=text].modified:not(:disabled) {
     width: 0;
     height: 0;*/
 }
+form.mieReadOnly input:not([type=button]),
+form.mieReadOnly select {
+    pointer-events: none;
+    color: #888;
+    background-color: #dbdcdd;
+    border-width: 0px;
+    box-shadow: none;
+}
+form.mieReadOnly #pnlStockList #dispLorry,
+form.mieReadOnly #pnlStockList div.oilTypeData,
+form.mieReadOnly #pnlStockList div.headerDate,
+form.mieReadOnly #pnlStockList div.footer {
+    display: none;
+}
+form.mieReadOnly #pnlStockList div.emptyBox {
+    height:50px;
+}
+form.mieReadOnly #spnInventoryDays,
+form.mieReadOnly #WF_ButtonAUTOSUGGESTION,
+form.mieReadOnly #WF_ButtonORDERLIST,
+form.mieReadOnly #WF_ButtonINPUTCLEAR,
+form.mieReadOnly #WF_ButtonGETEMPTURN,
+form.mieReadOnly #WF_ButtonRECULC,
+form.mieReadOnly #WF_ButtonUPDATE,
+form.mieReadOnly #WF_ButtonReport,
+form.mieReadOnly .lockImgArea {
+    display: none !important;
+}
+form.mieReadOnly #pnlSuggestList #divSuggestList div.leftColumn div:nth-child(1) {
+    height: calc(24px * 2);
+}
+form.mieReadOnly #pnlSuggestList #divSuggestList > div.oilTypeColumn > div:nth-child(3),
+form.mieReadOnly #pnlSuggestList #divSuggestList > div.dataColumn > div.values > div:nth-child(2) {
+    display: none;
+}
