〇費用管理画面 ・「タンク車輸送実績表」出力ボタン追加

--- a/JOTWEB/OIL/css/OIT0008M.css
+++ b/JOTWEB/OIL/css/OIT0008M.css
@@ -37,6 +37,10 @@ input#WF_DL_TRASPORTCOSTSDETAIL {
     margin-left: 20px;
 }
 
+input#WF_DL_TANKTRASPORTRESULT {
+    margin-left: 20px;
+}
+
 .memo_text {
     min-height: 1.0em;
 }
