--- a/JOTWEB/OIL/css/OIJ0001C.css
+++ b/JOTWEB/OIL/css/OIJ0001C.css
@@ -1,5 +1,54 @@
 ﻿/* 費用明細(月単位)作成画面 */
-/* #################１行目 ################# */
+/* 一旦レスポンス用 画像のプリロード */
+body:before {
+    content: url(../img/leftbox.png) url(../img/calendar.png);
+    display: none;
+}
+/* テキストボックス補正 */
+input[type=text] {
+    height: 1.6em;
+    font-size: 13.5px;
+    box-sizing: border-box;
+    padding-top: 1px;
+    padding-bottom: 1px;
+}
+
+.boxIconArea div, .calendarIconArea div {
+    margin-top: calc(100% - 12.5px);
+}
+/* アイコン位置補正 */
+/* Chromeのみアイコンがテキストボックスの中央に行かないので補正 */
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    .calendarIconArea div, .boxIconArea div {
+        margin-top: calc(100% - 12px);
+    }
+}
+/* Edgeも通ってしまうので打ち消す */
+_:-ms-lang(x)::backdrop, .calendarIconArea div, .boxIconArea div {
+    margin-top: calc(100% - 12.5px);
+}
+
+#divContensbox {
+    height: calc(100% - 2.4em - 1.4em);
+}
+/* コンテンツの最小横幅 */
+.headerbox, .detailbox, #tabBox {
+    min-width: 1220px;
+}
+
+    .detailbox a {
+        font-size: 12.8px;
+    }
+
+    .headerbox a {
+        font-size: 0.8em;
+    }
+
+.actionButtonBox {
+    padding: 5px;
+}
+
+
 /* 計上年月(ラベル) */
 #WF_KEIJYOYM_LABEL {
     position: fixed;
