--- a/JOTWEB/OIL/css/OIT0003OTL.css
+++ b/JOTWEB/OIL/css/OIT0003OTL.css
@@ -231,3 +231,91 @@ a.ef input {
     background-color: darkgrey !important;
     color: white;
 }
+/* ************************** */
+/* OT発送日報送信確認ボックス関連   */
+/* ************************** */
+/* 初期は非表示 */
+#divOTLinkageSendList {
+    display: none;
+    pointer-events: none;
+}
+/* 初期は非表示 */
+#divOTLinkageSendList.showOTLinkageSendConfirm {
+    padding:5px;
+    display:block;
+    position:absolute;
+    top:0;
+    background-color:white;
+    width:100%;
+    height:100%;
+    z-index:10;
+    pointer-events:auto;
+}
+#divOTLinkageSendList .actionButtonBox {
+    width:100vw;
+}
+#divOTLinkageSendList #divInputOTResultWrapper {
+    width:calc(100% - 5px);
+    height:calc(100% - 35px);
+    overflow:auto;
+}
+#divOTLinkageSendList .updateList {
+    margin-bottom:20px;
+    min-height:410px;
+}
+#btnCloseOTLinkageSendConfirm {
+    margin-right: 10px;
+}
+.tblUpdOTList {
+    border-collapse: collapse;
+    table-layout: fixed;
+} 
+.tblUpdOTList th,
+.tblUpdOTList td {
+    padding: 5px;
+    vertical-align :middle;
+    border:1px solid gray;
+}
+.tblUpdOTList td { 
+    vertical-align :top;
+}
+.tblUpdOTList td.officeName {
+    width:90px;
+}
+.tblUpdOTList td.sendYMD {
+    width:80px;
+}
+.tblUpdOTList td.trainNo {
+    width:50px;
+}
+.tblUpdOTList td.shipOrder {
+    width:150px;
+}
+.tblUpdOTList td.depStation {
+    width:65px;
+}
+.tblUpdOTList td.shippersName {
+    width:65px;
+}
+.tblUpdOTList td.oilName {
+    width:65px;
+}
+.tblUpdOTList td.tankNo {
+    width:65px;
+}
+.tblUpdOTList td.amount {
+    width:65px;
+}
+
+.tblUpdOTList th {
+    background-color:rgb(189,215,238);
+}
+/*.tblUpdList th.db {
+    background-color:rgb(248,203,173);
+}
+.tblUpdList td.amount {
+    text-align:right;
+}
+.tblUpdList tr.delFalg1 td {
+    background-color:lightgray ;
+}*/
