20210402_社外連携(OT発送日報)確認用画面※編集中

--- a/JOTWEB/OIL/css/OIT0003OTL.css
+++ b/JOTWEB/OIL/css/OIT0003OTL.css
@@ -294,6 +294,9 @@ a.ef input {
 .tblUpdOTList td.depStation {
     width:65px;
 }
+.tblUpdOTList td.arrStation {
+    width:65px;
+}
 .tblUpdOTList td.shippersName {
     width:65px;
 }
