在庫表：北信・甲府の更新情報を表示

--- a/JOTWEB/OIL/css/OIT0004S.css
+++ b/JOTWEB/OIL/css/OIT0004S.css
@@ -40,6 +40,6 @@ td.consigneeMark {
 .tblLastupdate tr:last-child>td:last-child  {
     border-bottom-right-radius: 5px;
 }
-#divConsigneeUpdateInfo {
+/*#divConsigneeUpdateInfo {
     display:none !important;
-}
+}*/
