〇費用管理画面修正（追加行で荷主を選択可にする・メモ欄を保存する）

--- a/JOTWEB/OIL/css/OIT0008M.css
+++ b/JOTWEB/OIL/css/OIT0008M.css
@@ -191,6 +191,11 @@ span.WF_COSTLISTTBL_CALCACCOUNT {
     display: inline-block;
 }
 
+input#WF_COSTLISTTBL_SHIPPERSNAME {
+    width: 112px;
+    padding-left: 25px;
+}
+
 input#WF_COSTLISTTBL_ACCOUNTCODE {
     width: 112px;
     padding-left:25px;
