〇タンク車輸送実績表→タンク車運賃実績表に変更 ・タンク車運賃実績表（着駅別）追加 ・タンク車運賃実績表、同（着駅別）に仙台新港営業所向けレイアウト追加 ・費用管理画面の「タンク車輸送実績表」出力ボタン削除

--- a/JOTWEB/OIL/css/M00001.css
+++ b/JOTWEB/OIL/css/M00001.css
@@ -884,7 +884,8 @@ div.showGuidance a[id^="Menu_"] {
 }
 
 #reportDLAreaPane #reportConditionArea .termInputArea,
-#reportDLAreaPane #reportConditionArea .officeSelectArea {
+#reportDLAreaPane #reportConditionArea .officeSelectArea,
+#reportDLAreaPane #reportConditionArea .typeSelectArea {
     display: inline-block;
     margin-left: 5px;
 }
