在庫管理の在庫確定機能追加。軽油２号置き換え処理追加

--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -952,3 +952,22 @@ form.mieReadOnly #pnlSuggestList #divSuggestList > div.oilTypeColumn > div:nth-c
 form.mieReadOnly #pnlSuggestList #divSuggestList > div.dataColumn > div.values > div:nth-child(2) {
     display: none;
 }
+/* 確定ポップアップ関連 */
+#popUpPrintTitle, #popUpFixTitle,#popUpPrintSettings, #popUpFixSettings {
+    display: none;
+}
+
+#txtFixDate {
+    margin-top:10px;
+    width:120px;
+}
+.divFixDateArea {
+    width:100%;
+}
+#txtFixDate {
+    width: 150px !important;
+}
+#lblFixStatus {
+    color:blue;
+    font-weight:bold;
+}
