--- a/JOTWEB/OIL/css/OIT0008C.css
+++ b/JOTWEB/OIL/css/OIT0008C.css
@@ -197,9 +197,15 @@ table#WF_COSTDETAILTBL input[type=text] {
     width: 114px;
 }
 
-table#WF_COSTDETAILTBL td.WF_COSTDETAILTBL_TD10,
-table#WF_COSTDETAILTBL td.WF_COSTDETAILTBL_TD11 {
+table#WF_COSTDETAILTBL td.WF_COSTDETAILTBL_TD11,
+table#WF_COSTDETAILTBL td.WF_COSTDETAILTBL_TD12 {
     text-align: right;
     padding-right: 3px;
     width: 114px;
+}
+
+table#WF_COSTDETAILTBL input[id=WF_COSTDETAILTBL_TEKIYOU] {
+    text-align: left;
+    padding-left: 3px;
+    width: 570px;
 }
