〇20210614_月間列車牽引実績（五井・発基準or積基準選択対応・指摘票No.514）

--- a/JOTWEB/OIL/css/M00001.css
+++ b/JOTWEB/OIL/css/M00001.css
@@ -446,7 +446,8 @@ div.showGuidance a[id^="Menu_"] {
 
 .paneContent select.officeDdl,
 .paneContent select.stationDdl,
-.paneContent select.yearMonthDdl {
+.paneContent select.yearMonthDdl,
+.paneContent select.dayStandardDdl {
     height: 28px;
     font-size: 12pt;
     padding: 2px;
