〇20210708_費用管理・科目別一覧帳票出力追加

--- a/JOTWEB/OIL/css/OIT0008M.css
+++ b/JOTWEB/OIL/css/OIT0008M.css
@@ -34,7 +34,8 @@
 }
 
 input#WF_DL_TRASPORTCOSTSDETAIL,
-input#WF_DL_FINANCE_COOPERATION {
+input#WF_DL_FINANCE_COOPERATION,
+input#WF_DL_ACCOUNT_BUSINESS_INCOME {
     margin-left: 20px;
 }
 
